<resources>
    <string name="app_name">Sis Mada</string>
    <string name="wellcome_back">Wellcome Back</string>
    <string name="login_to_continue">Login to Continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="text_date">Text Date</string>
    <string name="previous"><![CDATA[<-]]></string>
    <string name="next"><![CDATA[->]]></string>
    <string name="date">Feb 2022</string>
    <string name="today">Today</string>
    <string name="calender">Calender</string>
    <string name="person">Person</string>
    <string name="Penkes">Penkes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="halaman_obat">Halaman Obat</string>
    <string name="halaman_diet">Halaman Diet</string>
    <string name="diet">Diet</string>
    <string name="activitas">Activitas</string>
    <string name="obat">Obat</string>
    <string name="hari">Hari</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="laki_laki">laki - laki</string>
    <string name="perempuan">perempuan</string>
    <string name="gds">GDS</string>
    <string name="halama_gds">Halama GDS</string>
    <string name="halaman_gds">Halaman GDS</string>
    <string name="penkes_video">Penkes Video</string>
    <string name="halaman_penkes_video">Halaman Penkes Video</string>
    <string name="create">Create</string>
    <string-array name="languages">
        <item name="0">Select Pekerjaan</item>
        <item name="1">C</item>
        <item name="2">C++</item>
        <item name="3">Java</item>
        <item name="4">JavaScript</item>
        <item name="5">VisualBasic</item>
    </string-array>

</resources>