<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/penkes"
        android:enabled="true"
        android:icon="@drawable/ic_penkes"
        android:title="@string/Penkes" />

    <item
        android:id="@+id/penkesVideo"
        android:enabled="true"
        android:icon="@drawable/ic_video"
        android:title="@string/penkes_video" />

    <!--<item
        android:id="@+id/diet"
        android:enabled="true"
        android:icon="@drawable/ic_diet"
        android:title="@string/diet" />

    <item
        android:id="@+id/aktivitas"
        android:enabled="true"
        android:icon="@drawable/ic_aktifitas"
        android:title="@string/activitas"/>-->

    <item
        android:id="@+id/obat"
        android:enabled="true"
        android:icon="@drawable/ic_pil_injeksi"
        android:title="@string/obat"/>

    <item
        android:id="@+id/gds"
        android:enabled="true"
        android:icon="@drawable/ic_gds_chart"
        android:title="@string/gds"/>
</menu>