<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    android:background="@drawable/background"
    tools:context=".activity.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"/>

        <FrameLayout
            android:id="@+id/layoutImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageProfile"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:background="@mipmap/ic_logo_foreground"
                android:scaleType="centerCrop"
                app:riv_oval="true" />
        </FrameLayout>

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/background_input"
            android:hint="Nama"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp" />

<!--        <EditText-->
<!--            android:id="@+id/inputEmail"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="@dimen/_45sdp"-->
<!--            android:layout_marginTop="@dimen/_20sdp"-->
<!--            android:background="@drawable/background_input"-->
<!--            android:hint="@string/email"-->
<!--            android:imeOptions="actionNext"-->
<!--            android:importantForAutofill="no"-->
<!--            android:inputType="textEmailAddress"-->
<!--            android:paddingStart="@dimen/_16sdp"-->
<!--            android:paddingEnd="@dimen/_16sdp"-->
<!--            android:textColor="@color/primary_text"-->
<!--            android:textSize="@dimen/_13ssp" />-->

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/background_input"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp" />

        <RadioGroup
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/male"
                android:text="@string/laki_laki"
                android:textSize="@dimen/_13ssp"
                android:textColor="@color/white"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_40sdp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/female"
                android:text="@string/perempuan"
                android:textSize="@dimen/_13ssp"
                android:textColor="@color/white"/>

        </RadioGroup>


        <EditText
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/background_input"
            android:hint="Umur"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Pendidikan:"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/white"
            />

        <Spinner
            android:id="@+id/pendidikan"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/background_input"
            android:spinnerMode="dialog"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Pekerjaan:"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/white"
            />

        <Spinner
            android:id="@+id/pekerjaan"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/background_input"
            android:spinnerMode="dialog"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:animateLayoutChanges="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSignUp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_8sdp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="invisible" />

        </FrameLayout>

        <TextView
            android:id="@+id/textSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/sign_in"
            android:textColor="@color/primary"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>