<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.WeekViewActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:textColor="@color/white"
            android:background="@color/white"
            android:textStyle="bold"
            android:onClick="previousWeekAction"
            android:textSize="@dimen/_20ssp"/>

        <TextView
            android:id="@+id/monthYear"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="@dimen/_20sdp"
            android:textAlignment="center"
            android:textColor="@color/secondary_text"/>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textColor="@color/white"
            android:background="@color/white"
            android:textStyle="bold"
            android:onClick="nextWeekAction"
            android:textSize="@dimen/_20ssp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="SUN"
            android:textColor="@color/primary"
            android:textAlignment="center"
            android:textSize="@dimen/_16ssp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="MON"
            android:textColor="@color/primary"
            android:textAlignment="center"
            android:textSize="@dimen/_16ssp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TUE"
            android:textColor="@color/primary"
            android:textAlignment="center"
            android:textSize="@dimen/_16ssp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="WED"
            android:textColor="@color/primary"
            android:textAlignment="center"
            android:textSize="@dimen/_16ssp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="THUR"
            android:textColor="@color/primary"
            android:textAlignment="center"
            android:textSize="@dimen/_16ssp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="FRI"
            android:textColor="@color/primary"
            android:textAlignment="center"
            android:textSize="@dimen/_16ssp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="SAT"
            android:textColor="@color/primary"
            android:textAlignment="center"
            android:textSize="@dimen/_16ssp"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calenderRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Event"
        android:textColor="@color/white"
        android:background="@color/primary"
        android:textStyle="bold"
        android:onClick="newEventAction"
        android:layout_gravity="center"
        android:textSize="20sp"/>

    <ListView
        android:id="@+id/eventListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"/>

</LinearLayout>