<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".fragment.Aktivitas">

    <TextView
        android:id="@+id/textToday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        android:text="Halaman Aktivitas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_16sdp"
        android:orientation="vertical"
        android:background="@drawable/background_content_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textToday">

        <Button
            android:id="@+id/buttonPrev"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/previous"
            android:textSize="@dimen/_8ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/monthYear"
            android:layout_width="wrap_content"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="@dimen/_14sdp"
            android:text="@string/date"
            android:textSize="@dimen/_16sdp"
            android:textAlignment="center"
            android:textColor="@color/secondary_text"/>

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginRight="@dimen/_1sdp"
            android:layout_gravity="top|right"
            android:text="@string/next"
            android:textSize="@dimen/_8ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:tint="@color/white" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/background_chat_input"
                android:text="SUN"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="@dimen/_14ssp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/background_chat_input"
                android:text="MON"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="@dimen/_14ssp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/background_chat_input"
                android:text="TUE"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="@dimen/_14ssp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/background_chat_input"
                android:text="WED"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="@dimen/_14ssp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/background_chat_input"
                android:text="THUR"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="@dimen/_14ssp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/background_chat_input"
                android:text="FRI"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="@dimen/_14ssp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/background_chat_input"
                android:text="SAT"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="@dimen/_14ssp"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calenderRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_80sdp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <Button
            android:id="@+id/createBtn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_270sdp"
            android:layout_gravity="top|center"
            android:text="Create"
            android:textColor="@color/white"
            android:textSize="@dimen/_8ssp"/>

        <LinearLayout
            android:id="@+id/event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_300sdp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/eventListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </LinearLayout>


    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>